--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
     Error : <input type="text" id = "convergence" value="1E-4"> <br>
+    N :<input type="text" id = "Nstate" value="10">
+    <input type="button" onclick="rand();" value = "Random Matrix">
+    <br>
+
     <textarea rows="10" cols="50" id= "matrix">
             [[1.0, 1.0, 1.0],
             [1.0, 1.0, 1.0],
