more performance Boost by SIJ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     N :<input type="text" id = "Nstate" value="10">
     <input type="button" onclick="rand();" value = "Random Matrix">
     <br>
-
+    <h1>Matrix</h1>
     <textarea rows="10" cols="50" id= "matrix">
             [[1.0, 1.0, 1.0],
             [1.0, 1.0, 1.0],
@@ -18,5 +18,11 @@
     <input type="button" onclick="start();" value="Start">
     <input type="button" onclick="stop();" value="Stop">
     <div id="answer"></div>
+    <h1>Eigenvalues</h1>
+    <textarea rows="3" cols="50" id= "eigen">
+    </textarea>
+    <h1>Eigenvectors</h1>
+    <textarea rows="10" cols="50" id= "vector">
+    </textarea>
     </body>
 </html>
